--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,14 +9,14 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  &:before{
+  background-color: #EEF5FF;
+  /* &:before{
     content:'';
     content: "";
     width: 100%;
     height: 100vh;
-    background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #097b65, #166040);
-    // background: #D3D3D3;
-    //background-image: url("../../public/imgs/bg.jpg");
+    background: linear-gradient(to right bottom, #934fa4, #5f75c6, #5873cc, #49c3ab, #71ddae);
+   
     position: fixed;
     left: 0;
     top: 0;
@@ -24,7 +24,7 @@ body {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+  } */
 }
 
 .text-shadow{
