--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background-color: #EEF5FF;
+  background-color: #dce3ed;
   /* &:before{
     content:'';
     content: "";
